--- a/supertuxkart.desktop
+++ b/supertuxkart.desktop
@@ -1,15 +1,15 @@
 [Desktop Entry]
 Encoding=UTF-8
 Name=SuperTuxKart
-Icon=/usr/local/share/pixmaps/supertuxkart_64.xpm
+Icon=C:/Program Files/SuperTuxKart/share/pixmaps/supertuxkart_64.xpm
 GenericName=A kart racing game
 GenericName[de_DE]=Ein Kart-Rennspiel
 GenericName[fr_FR]=Un jeu de karting
 GenericName[gl]=Xogo de carreiras con karts
 GenericName[ro_RO]=Un joc de curse cu carturi
-Exec=/usr/local/games/supertuxkart --log=file
+Exec=C:/Program Files/SuperTuxKart/games/supertuxkart --log=file
 Terminal=false
 StartupNotify=false
 Type=Application
-TryExec=/usr/local/games/supertuxkart
+TryExec=C:/Program Files/SuperTuxKart/games/supertuxkart
 Categories=Game;ArcadeGame;
